<resources>
    <string name="app_name">ReadX</string>
    <string name="title_activity_home_detail_host">HomeDetailHostActivity</string>
    <string name="title_home_list">Home</string>
    <string name="title_home_detail">Home Detail</string>
    <string name="tu_actividad">Tu actividad</string>
    <string name="ajustes">Ajustes</string>
    <string name="amigos">Soporte</string>
    <string name="bienvenido_name">¡Hola nuevamente %1$s!</string>
    <string name="jugar">Jugar</string>
    <string name="Logo">LOGO</string>
    <string name="ranking_semanal">Ranking Semanal</string>
    <string name="ranking_global">Ranking Global</string>
    <string name="imgConf">..</string>
    <string name="ImgGame">...</string>
    <string name="tresPuntosImg">...</string>
    <string name="Confimg">TODO</string>
    <string name="opci_n_1">Opción 1</string>
    <string name="opci_n_2">Opción 2</string>
    <string name="opci_n_3">Opción 3</string>
    <string name="Emai">E-mail</string>
    <string name="Contraseña">Contraseña</string>
    <string name="ingresar">Ingresar</string>
    <string name="registrar">Crear cuenta nueva</string>
    <string name="title_activity_login">Login</string>
    <string name="promedio_semanal">Promedio semanal: %d minutos</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="messages_header">Mensajes</string>
    <string name="sync_header">Sincronización</string>
    <string name="signature_title">Tu firma</string>
    <string name="reply_title">Acción de respuesta predeterminada</string>
    <string name="sync_title">Sincronizar correo periódicamente</string>
    <string name="attachment_title">Descargar adjuntos entrantes</string>
    <string name="attachment_summary_on">Descargar automáticamente adjuntos para correos entrantes</string>
    <string name="attachment_summary_off">Descargar adjuntos solo cuando se soliciten manualmente</string>
    <string name="title_activity_quiz">QuizActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="imgRank">TODO</string>
    <string name="puntaje_0">Puntaje: 0</string>
    <string name="email">Correo electrónico</string>
    <string name="iniciar_sesion">Iniciar sesión</string>
    <string name="name">Nombre</string>
    <string name="eliminar_cuenta">Eliminar Cuenta</string>
    <string name="cerrar_sesion">Cerrar Sesión</string>
    <string name="configuración">Configuración</string>
    <string name="gif">
<![CDATA[Estimado usuario,\u0020\n\u0020\n
Un PQRS es un sistema que permite a los usuarios presentar Peticiones, Quejas, Reclamos y Sugerencias. Estas pueden estar relacionadas con cualquier aspecto de nuestra aplicación que creas que podría mejorarse o que te esté causando problemas.\u0020\n
Aquí te explicamos cómo puedes enviar un PQRS:\u0020\n\u0020\n
1. Identifica tu necesidad: Antes de enviar un PQRS, identifica si lo que quieres enviar es una Petición, Queja, Reclamo o Sugerencia.\u0020\n\u0020\n
2. Haz clic en el botón de PQRS: En nuestra aplicación, encontrarás un botón dedicado para enviar PQRS. Haz clic en él.\u0020\n\u0020\n
3. Completa el formulario: Se te presentará un formulario para completar con tu información y los detalles de tu PQRS.\u0020\n\u0020\n
4. Envía tu PQRS: Una vez que hayas completado el formulario, puedes enviar tu PQRS. Nos esforzamos por responder a todas las consultas dentro de un plazo de 48 horas.\u0020\n\u0020\n
Esperamos que esta información te sea útil y te animamos a que utilices el sistema de PQRS para ayudarnos a mejorar nuestra aplicación.\u0020\n\u0020\n
Atentamente,\u0020\n\u0020\n
ReadX
]]>
</string>
    <string name="soporte">Soporte</string>
    <string name="IMAGEN">TODO</string>
    <string name="atras">TODO</string>
    <string name="continuar">Continuar</string>
    <string name="información">Información</string>
    <string name="prueba_de_conocimientos">¡Bienvenido a nuestra prueba de comprensión lectora! Responde 10 preguntas en un lugar tranquilo y sin distracciones. Desplázate hacia abajo y pulsa "Continuar" para comenzar. ¡Buena suerte!</string>
</resources>