<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.soport">

    <ImageView
        android:id="@+id/imageView14"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:importantForAccessibility="no"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@color/boton" />

    <TextView
        android:id="@+id/sopor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/soporte"
        android:textColor="@color/primarySecond"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/MensajeSopor"
        android:layout_width="348dp"
        android:layout_height="206dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="5dp"
        android:gravity="center"
        android:text="@string/gif"
        android:textColor="@color/primarySecond"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/imageView7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sopor"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="TextSizeCheck" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="325dp"
        android:layout_height="178dp"
        android:layout_marginBottom="248dp"
        android:contentDescription="@string/IMAGEN"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/happy" />

    <ImageButton
        android:id="@+id/botonIrAHomeDos"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/atras"
        android:backgroundTint="@color/primarySecond"
        android:contentDescription="@string/atras"
        app:layout_constraintEnd_toStartOf="@+id/sopor"
        app:layout_constraintHorizontal_bias="0.269"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="DuplicateSpeakableTextCheck,DuplicateSpeakableTextCheck,TouchTargetSizeCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>